@@ -1,3 +1,8 @@
+2011-08-17  Per Bothner  <per@bothner.com>
+
+	* defs.scm: Update to use Stage#show rather than old Stage#setVisible.
+	* MakeScene.scm: Update package containing SceneBuilder.
+
 2011-07-30  Per Bothner  <per@bothner.com>
 
 	* defs.scm: Remove some debugging print-outs.
